Fix spacing styles

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');
 
-.body, .html {
+body, html {
   margin: 0;
   padding: 0;
 }
